...
    >

    <Button
        android:id="@+id/btnScanningMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scanning mode"
        android:textColor="@color/regularBlue"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
...
