...
                android:backgroundTint="#0080fe"
                android:text="@string/Income"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/btnMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:backgroundTint="#0080fe"
                android:text="@string/Move"
                app:layout_constraintEnd_toEndOf="parent"
...
